--- a/IndiabanaApp/app/src/main/res/layout/activity_main_content.xml
+++ b/IndiabanaApp/app/src/main/res/layout/activity_main_content.xml
@@ -24,6 +24,15 @@
                 android:layout_centerVertical="true"
                 android:src="@drawable/ic_mdi_menu" />
 
+            <ImageView
+                android:id="@+id/back_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_mdi_keyboard_arrow_left_white"
+                android:visibility="gone" />
+
             <TextView
                 android:id="@+id/text"
                 android:layout_width="wrap_content"
