--- a/IndiabanaApp/app/src/main/res/layout/alliance_product_rv_item.xml
+++ b/IndiabanaApp/app/src/main/res/layout/alliance_product_rv_item.xml
@@ -24,6 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:textStyle="bold"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:fontFamily="@font/roboto_regular"
         android:text="Samsung Galaxy 20A, ultra desbloqueado para todas las operadoras."
         android:textColor="@color/black"
