--- a/IndiabanaApp/app/src/main/res/layout/cart_rv_item.xml
+++ b/IndiabanaApp/app/src/main/res/layout/cart_rv_item.xml
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:maxLines="2"
+                android:ellipsize="end"
                 android:textColor="@color/black"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/roboto_regular"
