--- a/IndiabanaApp/app/src/main/res/layout/favourite_rv_item.xml
+++ b/IndiabanaApp/app/src/main/res/layout/favourite_rv_item.xml
@@ -77,6 +77,7 @@
                 android:fontFamily="@font/roboto_regular"
                 android:minLines="2"
                 android:maxLines="2"
+                android:ellipsize="end"
                 android:text="Apple AirPods with Charging Case (Lasted..."
                 android:textColor="@color/black"
                 android:textSize="12sp"
