--- a/IndiabanaApp/app/src/main/res/layout/operations_rv_item.xml
+++ b/IndiabanaApp/app/src/main/res/layout/operations_rv_item.xml
@@ -33,6 +33,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
+            android:maxLines="2"
+            android:ellipsize="end"
             android:layout_toEndOf="@id/order_detail_product_imageView"
             android:fontFamily="@font/roboto_regular"
             android:text="Samsung Glaxy 20A, ultra desbloqueado para todas las operadoras."
