--- a/IndiabanaApp/app/src/main/res/layout/products_rv_item.xml
+++ b/IndiabanaApp/app/src/main/res/layout/products_rv_item.xml
@@ -30,6 +30,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
+            android:maxLines="2"
+            android:ellipsize="end"
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
