--- a/IndiabanaApp/app/src/main/res/layout/requests_potential_rv_item.xml
+++ b/IndiabanaApp/app/src/main/res/layout/requests_potential_rv_item.xml
@@ -75,6 +75,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/rating_bar_requests"
             android:layout_alignParentEnd="true"
+            android:maxLines="2"
+            android:ellipsize="end"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="36dp"
             android:layout_toEndOf="@+id/request_potential_rv_item_img"
