--- a/IndiabanaApp/app/src/main/res/layout/activity_alliance_request_temp.xml
+++ b/IndiabanaApp/app/src/main/res/layout/activity_alliance_request_temp.xml
@@ -44,7 +44,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/cart_continue_btn"
+        android:id="@+id/accept_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -79,7 +79,7 @@
         android:id="@+id/material_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/cart_continue_btn"
+        android:layout_above="@id/accept_btn"
         android:layout_below="@+id/cl_image"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="-20dp"
