--- a/IndiabanaApp/app/src/main/res/layout/fragment_promote_details.xml
+++ b/IndiabanaApp/app/src/main/res/layout/fragment_promote_details.xml
@@ -9,7 +9,7 @@
     tools:context=".Fragments.PromoteDetailsFragment">
 
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -18,7 +18,11 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:scaleType="fitXY"
-            android:src="@drawable/promote_orange_top_bg" />
+            android:src="@drawable/promote_orange_top_bg"
+            app:layout_constraintDimensionRatio="375:40"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -27,9 +31,13 @@
             android:fontFamily="@font/roboto_bold"
             android:text="Asigne presupuesto"
             android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:textSize="18sp" />
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <TextView
