--- a/IndiabanaApp/app/src/main/res/layout/productamount_productimage_rv_item.xml
+++ b/IndiabanaApp/app/src/main/res/layout/productamount_productimage_rv_item.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp">
 
     <ImageView
         android:id="@+id/product_img"
         android:layout_width="74dp"
         android:layout_height="74dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="14dp"
         android:scaleType="fitXY"
         android:src="@drawable/rectangle_104"
         app:layout_constraintStart_toStartOf="parent"
