--- a/IndiabanaApp/app/src/main/res/layout/activity_add_product_amount.xml
+++ b/IndiabanaApp/app/src/main/res/layout/activity_add_product_amount.xml
@@ -93,7 +93,7 @@
                         android:layout_marginTop="12dp"
                         android:layout_marginEnd="16sp"
                         android:layout_marginBottom="8dp"
-                        android:background="@color/white"
+                        android:background="@drawable/edit_text_radius_border"
                         android:backgroundTint="@color/activity_bg_color"
                         android:gravity="top"
                         android:hint="@string/describe_product"
