--- a/IndiabanaApp/app/src/main/res/layout/question_fragment_rv_item.xml
+++ b/IndiabanaApp/app/src/main/res/layout/question_fragment_rv_item.xml
@@ -31,14 +31,15 @@
         android:textStyle="italic"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:ellipsize="end"
+        android:maxLines="2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/product_name"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginEnd="50dp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="8dp"
-        />
+        android:layout_marginBottom="8dp" />
 
     <ImageView
         android:id="@+id/btn"
