change product shipping activity

--- a/IndiabanaApp/app/src/main/res/layout/activity_add_product_amount.xml
+++ b/IndiabanaApp/app/src/main/res/layout/activity_add_product_amount.xml
@@ -163,6 +163,7 @@
                             android:hint="Ej. 100"
                             android:padding="10dp"
                             android:textColor="@color/dateColor"
+                            android:inputType="number"
                             android:textSize="14sp" />
 
                         <TextView
