--- a/IndiabanaApp/app/src/main/res/values/colors.xml
+++ b/IndiabanaApp/app/src/main/res/values/colors.xml
@@ -38,5 +38,6 @@
     <color name="outstanding_badge">#ADADAD</color>
     <color name="gold_badge">#FFE07D</color>
     <color name="azul_oscuro">#13162D</color>
+    <color name="stroke">#E0E0E0</color>
     <!--AddProductPriceActivityRvAdapter-->
 </resources>
