change editbox hint

--- a/IndiabanaApp/app/src/main/res/layout/activity_add_product_datasheet.xml
+++ b/IndiabanaApp/app/src/main/res/layout/activity_add_product_datasheet.xml
@@ -94,8 +94,8 @@
                         android:layout_marginStart="12dp"
                         android:drawableEnd="@drawable/ic_mdi_edit"
                         android:fontFamily="@font/roboto_regular"
-                        android:text="SAMSUNG"
-                        android:textColor="@color/text2"
+                        android:hint="SAMSUNG"
+                        android:textColorHint="@color/text2"
                         android:textSize="14sp"
                         app:layout_constraintBottom_toTopOf="@+id/view_brand"
                         app:layout_constraintStart_toStartOf="parent"
@@ -109,8 +109,8 @@
                         android:layout_marginStart="12dp"
                         android:drawableEnd="@drawable/ic_mdi_edit"
                         android:fontFamily="@font/roboto_regular"
-                        android:text="Silver Platinum LA12"
-                        android:textColor="@color/text2"
+                        android:hint="Silver Platinum LA12"
+                        android:textColorHint="@color/text2"
                         android:textSize="14sp"
                         app:layout_constraintBottom_toTopOf="@+id/view_model"
                         app:layout_constraintStart_toStartOf="parent"
@@ -124,8 +124,8 @@
                         android:layout_marginStart="12dp"
                         android:drawableEnd="@drawable/ic_mdi_edit"
                         android:fontFamily="@font/roboto_regular"
-                        android:text="Silver Platinum LA12"
-                        android:textColor="@color/text2"
+                        android:hint="Silver Platinum LA12"
+                        android:textColorHint="@color/text2"
                         android:textSize="14sp"
                         app:layout_constraintBottom_toTopOf="@+id/view_code"
                         app:layout_constraintStart_toStartOf="parent"
@@ -139,8 +139,8 @@
                         android:layout_marginStart="12dp"
                         android:drawableEnd="@drawable/ic_mdi_edit"
                         android:fontFamily="@font/roboto_regular"
-                        android:text="42”"
-                        android:textColor="@color/text2"
+                        android:hint="42”"
+                        android:textColorHint="@color/text2"
                         android:textSize="14sp"
                         app:layout_constraintBottom_toTopOf="@+id/view_screen_size"
                         app:layout_constraintStart_toStartOf="parent"
@@ -154,8 +154,8 @@
                         android:layout_marginStart="12dp"
                         android:drawableEnd="@drawable/ic_mdi_edit"
                         android:fontFamily="@font/roboto_regular"
-                        android:text="@string/sample_response"
-                        android:textColor="@color/text2"
+                        android:hint="@string/sample_response"
+                        android:textColorHint="@color/text2"
                         android:textSize="14sp"
                         app:layout_constraintBottom_toTopOf="@+id/view_example_card1"
                         app:layout_constraintStart_toStartOf="parent"
@@ -170,8 +170,8 @@
                         android:drawableEnd="@drawable/ic_mdi_edit"
                         android:fontFamily="@font/roboto_regular"
                         android:paddingBottom="12dp"
-                        android:text="@string/sample_response"
-                        android:textColor="@color/text2"
+                        android:hint="@string/sample_response"
+                        android:textColorHint="@color/text2"
                         android:textSize="14sp"
                         app:layout_constraintBottom_toTopOf="@+id/view_example_card2"
                         app:layout_constraintStart_toStartOf="parent"
@@ -186,8 +186,8 @@
                         android:drawableEnd="@drawable/ic_mdi_edit"
                         android:fontFamily="@font/roboto_regular"
                         android:paddingBottom="12dp"
-                        android:text="@string/sample_response"
-                        android:textColor="@color/text2"
+                        android:hint="@string/sample_response"
+                        android:textColorHint="@color/text2"
                         android:textSize="14sp"
                         app:layout_constraintBottom_toTopOf="@+id/view_example_card3"
                         app:layout_constraintStart_toStartOf="parent"
@@ -202,8 +202,8 @@
                         android:drawableEnd="@drawable/ic_mdi_edit"
                         android:fontFamily="@font/roboto_regular"
                         android:paddingBottom="12dp"
-                        android:text="@string/sample_response"
-                        android:textColor="@color/text2"
+                        android:hint="@string/sample_response"
+                        android:textColorHint="@color/text2"
                         android:textSize="14sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/textview_example_card4" />
