--- a/IndiabanaApp/app/src/main/res/values/themes.xml
+++ b/IndiabanaApp/app/src/main/res/values/themes.xml
@@ -12,6 +12,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <item name="android:colorAccent">@color/indiabana_orange</item>
+        <item name="colorControlActivated">@color/indiabana_orange</item>
+        <item name="colorControlHighlight">@color/indiabana_orange</item>
         <!-- Customize your theme here. -->
     </style>
 
