--- a/IndiabanaApp/app/src/main/res/values/themes.xml
+++ b/IndiabanaApp/app/src/main/res/values/themes.xml
@@ -62,4 +62,11 @@
         <item name="colorAccent">#2C98F0</item>
     </style>
 
+    <style name="RatingBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/custom_rating_bar</item>
+        <item name="android:indeterminateDrawable">@drawable/custom_rating_bar</item>
+        <item name="android:minHeight">50dp</item>
+        <item name="android:maxHeight">50dp</item>
+    </style>
+
 </resources>
