--- a/IndiabanaApp/app/src/main/res/layout/activity_buyer_order_problem.xml
+++ b/IndiabanaApp/app/src/main/res/layout/activity_buyer_order_problem.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/activity_bg_color"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.RatePurchase.BuyerOrderProblem">
@@ -87,7 +88,7 @@
                 android:layout_marginBottom="12dp"
                 android:backgroundTint="#BDBDBD"
                 android:layout_below="@+id/rate_tv_describe_problem"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/roboto"
                 android:hint="@string/write_here_the_problem_with_your_purchase"
                 android:textColor="@color/black"
                 android:textColorHint="#BDBDBD"
