--- a/IndiabanaApp/app/src/main/res/layout/activity_rate_purchase.xml
+++ b/IndiabanaApp/app/src/main/res/layout/activity_rate_purchase.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/activity_bg_color"
     android:layout_height="match_parent"
     tools:context=".Activities.AddProduct.AddProductActivity">
 
@@ -50,6 +51,7 @@
                         android:id="@+id/rb_package_fine"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto"
                         android:button="@drawable/custom_radion_button"
                         android:padding="10dp"
                         android:checked="true"
@@ -59,6 +61,7 @@
                         android:id="@+id/rb_problem_with_package"
                         android:layout_width="wrap_content"
                         android:button="@drawable/custom_radion_button"
+                        android:fontFamily="@font/roboto"
                         android:padding="10dp"
                         android:layout_height="wrap_content"
                         android:text="@string/i_have_the_package_but_there_is_a_problem"/>
@@ -68,6 +71,7 @@
                         android:layout_height="wrap_content"
                         android:button="@drawable/custom_radion_button"
                         android:padding="10dp"
+                        android:fontFamily="@font/roboto"
                         android:clickable="false"
                         android:focusable="false"
                         android:text="@string/i_don_t_have_the_package"/>
@@ -97,11 +101,17 @@
                     android:layout_width="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
-                    android:numStars="5"
                     android:rating="0"
-                    android:isIndicator="false"
                     android:secondaryProgressTint="#00000000"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:isIndicator="true"
+                    android:max="5"
+                    android:numStars="5"
+                    android:transformPivotX="0dp"
+                    android:transformPivotY="0dp"
+                    android:scaleY="1.45"
+                    android:scaleX="1.45"
+                    />
 
                 <TextView
                     android:id="@+id/tv_rating_text"
@@ -111,6 +121,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignBottom="@+id/customer_rating"
                     android:layout_marginEnd="16dp"
+                    android:fontFamily="@font/roboto"
                     android:layout_weight="0.1"
                     android:layout_marginBottom="5dp"
                     android:layout_height="wrap_content"
@@ -131,8 +142,10 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
+                    android:fontFamily="@font/roboto"
                     android:background="@drawable/comment_box_background"
                     android:lines="5"
+                    android:textSize="14sp"
                     android:paddingLeft="10dp"
                     android:paddingTop="5dp"
                     android:paddingRight="10dp"
@@ -182,6 +195,8 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
+                    android:textSize="14sp"
+                    android:fontFamily="@font/roboto"
                     android:background="@drawable/comment_box_background"
                     android:gravity="start"
                     android:hint="@string/leave_your_comments_about_the_product_and_share_photos"
@@ -198,6 +213,7 @@
                     android:layout_below="@+id/opinion_customer_rating"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
+                    android:layout_marginTop="20dp"
                     android:scaleType="center"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -284,6 +300,7 @@
                     android:layout_alignBottom="@+id/opinion_customer_rating"
                     android:layout_alignParentRight="true"
                     android:layout_gravity="bottom"
+                    android:fontFamily="@font/roboto"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="5dp"
@@ -299,9 +316,15 @@
                     android:layout_marginLeft="@dimen/cardview_compat_inset_shadow"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
                     android:layout_weight="1"
                     android:max="5"
-                    android:numStars="5" />
+                    android:numStars="5"
+                    android:isIndicator="true"
+                    android:transformPivotX="0dp"
+                    android:transformPivotY="0dp"
+                    android:scaleY="1.45"
+                    android:scaleX="1.45"/>
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/rate_btn"
