delivers feed UI.

--- a/IndiabanaApp/app/src/main/res/layout/activity_main_content.xml
+++ b/IndiabanaApp/app/src/main/res/layout/activity_main_content.xml
@@ -57,6 +57,18 @@
                 android:layout_marginEnd="20dp"
                 android:src="@drawable/ic_mdi_search" />
 
+            <TextView
+                android:id="@+id/tv_cancel"
+                android:text="@string/cancel"
+                android:visibility="gone"
+                android:fontFamily="@font/roboto"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="20dp"
+                android:textColor="@color/bill_rv_item_status_red"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/search_text_card"
                 android:layout_width="match_parent"
@@ -135,7 +147,7 @@
         android:background="@color/dark_azyl">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/RABuyer_sendQues_btn"
+            android:id="@+id/main_continue_button"
             style="@style/OrangeBtnStyleBold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
