--- a/IndiabanaApp/app/src/main/res/layout/rate_delivery_buyer.xml
+++ b/IndiabanaApp/app/src/main/res/layout/rate_delivery_buyer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#E5E5E5"
+    android:background="@color/activity_bg_color"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -12,7 +12,7 @@
         android:layout_marginTop="12dp"
         android:text="@string/rate_activity_heading"
         android:textColor="#000000"
-        android:fontFamily="@font/roboto"
+        android:fontFamily="@font/roboto_bold"
         android:textSize="14sp"
         android:textStyle="normal"
         android:layout_marginStart="16dp"
@@ -42,6 +42,7 @@
             android:fontFamily="@font/roboto"
             android:textColor="#000000"
             android:textSize="14sp"
+            android:text="José Méndez"
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toEndOf="@id/image"
             android:layout_marginStart="8dp"
@@ -67,6 +68,7 @@
             android:fontFamily="@font/roboto"
             android:textColor="#000000"
             android:textSize="14sp"
+            android:text="12 Nov. 2020"
             android:layout_marginTop="4dp"
             app:layout_constraintStart_toEndOf="@id/date_heading"
             android:layout_marginStart="8dp"
@@ -86,14 +88,22 @@
 
         <RatingBar
             android:id="@+id/rating_bar"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:numStars="5"
             android:stepSize="0.1"
             android:layout_marginVertical="16dp"
+            android:layout_marginRight="50dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/line"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/rating_value"
             app:layout_constraintEnd_toEndOf="parent"
+            android:rating="0"
+            android:isIndicator="true"
+            android:max="5"
+            android:transformPivotX="0dp"
+            android:transformPivotY="0dp"
+            android:scaleY="1.45"
+            android:scaleX="1.45"
             />
         <TextView
             android:id="@+id/rating_value"
@@ -101,11 +111,12 @@
             android:fontFamily="@font/roboto"
             android:textColor="#000000"
             android:textStyle="normal"
+            android:background="@color/white"
             android:text="0/5"
+            android:gravity="bottom"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/rating_bar"
-            app:layout_constraintTop_toTopOf="@id/rating_bar"
+            android:layout_height="40dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/rating_bar"
             android:layout_marginStart="16dp"
             />
@@ -124,8 +135,9 @@
             app:layout_constraintTop_toBottomOf="@id/rating_bar"
             />
 
+
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn"
+            android:id="@+id/btn_rate_delivery"
             android:text="@string/rate"
             android:paddingVertical="10dp"
             android:fontFamily="@font/roboto"
